--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
-    "mongoose": "^5.6.4"
+    "mongoose": "^5.6.4",
+    "env-cmd": "^9.0.3"
   },
   "devDependencies": {
-    "env-cmd": "^9.0.3",
     "nodemon": "^1.19.1"
   }
 }
