--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.4",
-    "env-cmd": "^9.0.3",
+    "env-cmd": "^9.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
