--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "api ratings",
   "main": "index.js",
+  "scripts": {
+    "start": "env-cmd -f ./.env nodemon src/app.js"
+  },
   "author": "Fagner",
   "license": "ISC",
   "dependencies": {
@@ -10,7 +13,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.4",
-    "env-cmd": "^9.0.3"
+    "env-cmd": "^9.0.3",
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
