--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api ratings",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd -f ./.env nodemon src/app.js"
+    "start": "node src/app.js"
   },
   "author": "Fagner",
   "license": "ISC",
